--- a/_bibliography/publications.bib
+++ b/_bibliography/publications.bib
@@ -2,6 +2,20 @@
 ---
 References
 ==========
+
+@inproceedings{KolakROS20,
+  author =       {Kolak, Sophia and Afzal, Afsoon and {Le Goues}, Claire and Hilton, Michael and Timperley, Christopher Steven},
+  booktitle =    {International Conference on Software Maintenance and Evolution},
+  title =        {It Takes a Village to Build a Robot: An Empirical Study of The {ROS} Ecosystem},
+  year =         {2020},
+  series =       {ICSME '20},
+  volume =       { },
+  number =       {},
+  pages =        {},
+  data =         {https://doi.org/10.5281/zenodo.3997720},
+  project =      {robots}
+}
+
 @inproceedings{AfzalQualitative20,
   title =        {A Study on Challenges of Testing Robotic Systems},
   author =       {Afzal, Afsoon and {Le~Goues}, Claire and Hilton, Michael and Timperley, Christopher Steven},
