Ading new presentations

--- a/_bibliography/publications.bib
+++ b/_bibliography/publications.bib
@@ -39,7 +39,8 @@ References
   data={https://github.com/squaresLab/SOSRepair-Replication-Package},
   results={https://github.com/squaresLab/SOSRepair-Replication-Package},
   code={https://github.com/squaresLab/SOSRepair},
-  project={repair}
+  project={repair},
+  presentation={https://youtu.be/PYBxq28o6UM}
 }
 
 @inproceedings{WeintropCoBlox2018,
