Adding thesis and updating bio

--- a/_bibliography/publications.bib
+++ b/_bibliography/publications.bib
@@ -3,6 +3,18 @@
 References
 ==========
 
+@misc{AfzalGzScenic,
+      title={{GzScenic}: Automatic Scene Generation for Gazebo Simulator},
+      author={Afsoon Afzal and Claire {Le Goues} and Christopher S. Timperley},
+      year={2021},
+      eprint={2104.08625},
+      archivePrefix={arXiv},
+      primaryClass={cs.RO},
+      code = {https://github.com/squaresLab/GzScenic},
+      project = {robots}
+}
+
+
 @inproceedings{AfzalSimulation21,
   title =        {Simulation for Robotics Test Automation: Developer Perspectives},
   author =       {Afzal, Afsoon and Katz, Deborah S. and {Le~Goues}, Claire and Timperley, Christopher Steven},
