--- a/_bibliography/publications.bib
+++ b/_bibliography/publications.bib
@@ -2,6 +2,20 @@
 ---
 References
 ==========
+@article{AfzalMithra,
+  author={Afzal, Afsoon and Le Goues, Claire and Timperley, Christopher Steven},
+  journal={IEEE Transactions on Software Engineering}, 
+  title={Mithra: Anomaly Detection as an Oracle for Cyberphysical Systems}, 
+  year={2021},
+  volume={},
+  number={},
+  pages={1-1},
+  doi={10.1109/TSE.2021.3120680},
+  data={https://doi.org/10.6084/m9.figshare.14619177},
+  code={https://doi.org/10.6084/m9.figshare.14619177},
+  project={robots}
+}
+
 
 @misc{AfzalGzScenic,
       title={{GzScenic}: Automatic Scene Generation for Gazebo Simulator},
